--- a/src/sass/layout/_villa-section.scss
+++ b/src/sass/layout/_villa-section.scss
@@ -1,5 +1,5 @@
 .villa-section{
-    background-image: url('/Assets/background-image-copy.png');
+    background-image: url('https://i.ibb.co/hys9wzy/background-image-copy.png');
     background-position: center;
     background-size: cover;
     width: 100%;
