--- a/src/sass/layout/_villa-section.scss
+++ b/src/sass/layout/_villa-section.scss
@@ -1,5 +1,5 @@
 .villa-section{
-    background-image: url('https://i.ibb.co/hys9wzy/background-image-copy.png');
+    background-image: url('https://i.postimg.cc/cLZQZLxz/background-image-copy.png');
     background-position: center;
     background-size: cover;
     width: 100%;
@@ -40,7 +40,7 @@
             border-radius: 5px;
             &::before{
                 content:" ";
-                background-image: url('/Assets/man.png');
+                background-image: url('https://i.postimg.cc/85cT8Mfb/man.png');
                 background-position: center;
                 background-size: cover;
                 position:absolute;
