--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url('https://i.ibb.co/PxhYxV5/background.png');
+  background-image: url('https://i.postimg.cc/Gt20TCxJ/background.png');
   background-size: cover;
   height: 723px;
   margin-bottom: 96px;
@@ -22,26 +22,6 @@
       color: $light-color;
       margin-bottom: 40px;
     }
-
-    // .hero-dropdown {
-    //   width: 150px;
-    //   height: 50px;
-    //   padding-left: 20px;
-    //   border-top-left-radius: 10px;
-    //   border-bottom-left-radius: 10px;
-    //   box-shadow: 1px 0 0 0 rgba(0, 0, 0, 0.1);
-    //   background-color: $light-color;
-    //   outline: none;
-    //   border: none;
-    //   color: #454545;
-    //   font-size: 14px;
-    //   float: left;
-    //   border-right: 1px solid $dark-color;
-
-    //   option {
-    //     color: #454545;
-    //   }
-    // }
 
     .search-container {
       position: relative;
@@ -68,7 +48,7 @@
       transform: translateY(-50%);
       width: 20px;
       height: 20px;
-      background-image: url('/Assets/search.png');
+      background-image: url('https://i.postimg.cc/mr5ppHYM/search.png');
       background-size: cover;
       cursor: pointer;
     }
