--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,12 +1,12 @@
 .primary-btn-sm{
-    @include btn(#004dff);
+    @include btn($primary-color);
     padding: 5px 30px;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
 }
 .primary-btn-md{
-    @include btn(#004dff);
+    @include btn($primary-color);
     padding: 15px 26px;
     position: absolute;
     left:70%;
@@ -15,11 +15,16 @@
 }
 
 .secondary-btn {
-    @include btn(#1dc679);
+    @include btn($secondary-color);
     padding: 15px 22.5px;
     &:hover{
         background-color: #fff;
         color: #1dc679;
     }
 }
-
+@include breakpoints(map-get($breakpoints, "viewport-sm")){
+ .primary-btn-md{
+    left:50%;
+    padding: 15px 15px;
+ }
+}
