--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -10,6 +10,7 @@
 // --------Components imports--------
 @import '../components/button';
 @import '../components/dropdown';
+@import '../components/search-input';
 @import '../components/testimonials';
 @import '../components/villa-label';
 @import '../components/featured-property-card';
