--- a/src/sass/components/_featured-property-card.scss
+++ b/src/sass/components/_featured-property-card.scss
@@ -1,58 +1,52 @@
-.featured-property{
+.featured-property {
     .card-wrapper {
-        display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
-
         .card {
-            width: 340px;
+            width: 345px;
             height: 420px;
             margin-bottom: 30px;
             border-radius: 20px;
-            border: solid 2px #f0f0f1;
+            border: solid 2px $light-color-2;
             background-color: $light-color;
+            cursor: pointer;
+            &:hover{
+                box-shadow: 0 3px 28px 0 rgba(0,0,0,0.2);
+            }
 
             .card-img {
-                width: 337px;
+                width: 343px;
                 height: 200px;
-                margin-bottom: 19px;
                 border-top-left-radius: 20px;
                 border-top-right-radius: 20px;
 
             }
 
             .card-body {
-                padding: 0 0 50px 20px;
-                color: #454545;
+                padding: 19px 17px 50px;
+                color: $dark-color-1;
 
                 .card-title {
                     margin-bottom: 20px;
-                    font-size: 18px;
                 }
 
                 .card-price {
                     margin-bottom: 20px;
-                    font-size: 18px;
                     font-weight: bold;
-                    color: #004dff;
+                    color: $primary-color;
                 }
 
                 .card-description {
                     margin-bottom: 11px;
-                    font-size: 14px;
                 }
-
             }
-
-
         }
     }
 
 }
+
 .details {
     display: inline;
     opacity: 0.7;
-    font-size: 14px;
     color: #454545;
 }
 
@@ -93,4 +87,20 @@
         position: relative;
         top: 5px;
     }
+}
+@include breakpoints(map-get($breakpoints, "viewport-sm")){
+    .featured-property{
+    .card-wrapper{
+        .card {
+            width: 100%;
+            height: 420px;
+            .card-img {
+                width: 100%;
+                height: 200px;
+    
+            }
+        }
+       
+    }
+}
 }
