--- a/src/sass/components/_testimonials.scss
+++ b/src/sass/components/_testimonials.scss
@@ -1,7 +1,5 @@
 .client-card-section{
-    .card-wrapper{
-        display: flex;
-        justify-content: center;
+      .card-wrapper{
         min-width: 2345px;
         width: 100%;    
         .client-card{
@@ -10,9 +8,9 @@
             margin-top: 100px;
             padding: 50px 20px 0px;
             border-radius: 5px;
-            background-color: #f6f7f9;
+            background-color: $light-color-1;
             text-align: center;
-            color: #454545;
+            color: $dark-color-1;
             transition: all 0.5s ease-in-out;
              &:nth-of-type(1){
                  transform: translateY(-30px);
@@ -21,11 +19,10 @@
             &.active {
                 z-index: 2;
                 opacity: 1;
-                box-shadow: 0 19px 33px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-                border: solid 1px $light-color;
+                box-shadow: 1px 1px 3px 3px rgba(20,20,20,0.4);
                 background-color:$light-color;
                 position: relative ;
-                // height: 540px;
+                height: 540px;
               }
             .card-profile{
                 width: 120px;
@@ -50,9 +47,35 @@
         cursor: pointer;
     }
     .left{
-        left: -20px;
+        left: 25px;
     }
     .right{
         right: -20px;
     }
+}
+@include breakpoints(map-get($breakpoints, "viewport-sm")) {
+.client-card-section{
+    .card-wrapper{
+        justify-content: flex-start;
+        width: 100%;
+        .client-card{
+            width: 100%;
+            .card-profile{
+                // width: 100%;
+            }
+            .card-title{  
+                width: 100%;
+            }
+            .card-description{
+               width: 70%;
+            }
+        }
+    }
+    .left{
+        left: 0;
+    }
+    .right{
+        right: 0;
+    }
+}
 }
