--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,15 +1,33 @@
-footer{
-    height: 220px;
-    padding: 50px 250px 49px;
-    background-color: #f6f7f9;
+footer {
+    width: 100%;
+    overflow: auto;
+    padding: 50px 40px 49px;
+    background-color: $light-color-1 ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    img{
+
+    img {
         margin-bottom: 29px;
     }
-    p{
-        font-size: 14px;
-        line-height: 1.71;  
-        color: #454545;
-        text-align: center;
+
+    p {
+        line-height: 1.71;
+        color: $dark-color-1 ;
+        width: 730px;
+
+    }
+}
+
+@include breakpoints(map-get($breakpoints, "viewport-sm")) {
+    footer {
+        img {
+            margin-right: 30px;
+        }
+        p{
+            width: 100%;
+        }
     }
 }
