--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,6 +1,5 @@
 .navbar {
     color: $light-color;
-    // background-color: blue;
     position: absolute;
     width: 100%;
     padding: 20px 0;
@@ -29,7 +28,6 @@
 
                     a {
                         color: $light-color;
-                        font-size: 14px;
                         font-weight: 600;
 
                         &::after {
@@ -55,9 +53,6 @@
         }
 
         .nav-end {
-            display: flex;
-            align-items: center;
-
             a {
                 &:nth-child(1) {
                     margin-right: 25px;
@@ -78,8 +73,8 @@
 }
 .navbar-fixed{
     position: fixed;
-    background-color: #004dff;
-    transition: 0.3s ease-in-out;
+    background-color: $primary-color;
+    transition: 0.3s ease;
     z-index: 3;
 }
 
@@ -87,7 +82,9 @@
     .navbar {
         .container {
             &>a {
-                width: 40px;
+                img{
+             width: 140px;
+                }
             }
 
             nav {
@@ -124,8 +121,8 @@
             }
 
             .hamburger {
-                width: 30px;
-                height: 35px;
+                width: 20px;
+                height: 30px;
                 display: block;
 
                 .bar,
