--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -10,49 +10,30 @@
     transform: translateY(-40%);
 
     .hero-title {
-      font-size: 44px;
       font-weight: bold;
       color: $light-color;
       margin-bottom: 9px;
     }
 
     .hero-description {
-      font-size: 18px;
       font-weight: bold;
       color: $light-color;
       margin-bottom: 40px;
     }
 
-    .search-container {
-      position: relative;
-      display: inline-block;
-    }
-
-    .search-input {
-      width: 405px;
-      height: 50px;
-      font-size: 16px;
-      padding-left: 70px;
-      color: #454545;
-      border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
-      border: none;
-      outline: none;
-    }
-
-    .search-container::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 27px;
-      transform: translateY(-50%);
-      width: 20px;
-      height: 20px;
-      background-image: url('https://i.postimg.cc/mr5ppHYM/search.png');
-      background-size: cover;
-      cursor: pointer;
-    }
-
   }
 
+}
+@include breakpoints(map-get($breakpoints, "viewport-sm")){
+  .hero{
+    .hero-wrapper{
+      top: 35%;
+      .hero-title{
+        font-size: 33px;
+      }
+      .hero-description{
+        font-size: 15px;
+      }
+    }
+  }
 }
