--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,2 +1,8 @@
 $light-color:#ffffff;
+$light-color-1:#f6f7f9;
+$light-color-2:#f0f0f1;
 $dark-color:#000;
+$dark-color-1:#454545;
+$primary-color:#004dff;
+$secondary-color:#1dc679;
+$tertiary-color:#ff9f00;
